--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -217,6 +217,26 @@
       }
     }
   }
+
+  .home-footer{
+    margin-top: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    > div{
+      background-color: white;
+      display: flex;
+      gap: 5px;
+      align-items: center;
+    }
+    
+    img{
+      width: 1.3rem;
+      height: 1.3rem;
+      margin-top: 0.5rem;
+    }
+  }
   
   @media (max-width: 768px) {
     .home {
