--- a/src/styles/admin-styles/_products.scss
+++ b/src/styles/admin-styles/_products.scss
@@ -203,8 +203,13 @@
 }
 
 .print-content {
+  margin-left: 30px;
+  h1{
+    margin-bottom: 10px;
+  }
   p {
-    margin: 30px;
+    margin-top: 5px;
+    margin-left: 10px;
     > span {
       font-weight: 800;
     }
