--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -47,6 +47,7 @@ $color3: rgb(0, 104, 136);
 @import "login";
 @import "search";
 @import "productDetails";
+@import "orderDetails";
 @import "admin-styles/dashboard";
 @import "admin-styles/products";
 @import "admin-styles/chart";
