--- a/src/styles/_shipping.scss
+++ b/src/styles/_shipping.scss
@@ -166,6 +166,30 @@
   animation: fadeIn 0.5s ease-out;
 }
 
+.select-payment-method{
+  width: 100%;
+  text-align: center;
+
+  h3{
+    font-size: 1.2rem;
+    margin-top: -0.5rem;
+  }
+
+  input{
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .select-payment-labels{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 1.2rem;
+    padding: 0 3rem;
+    margin-top: 0.5rem;
+  }
+}
+
 @media (max-width: 480px) {
   .shipping {
     padding: 1rem;
